orders coming to firebase and layout bug fixed

--- a/src/components/Lunch/styles.css
+++ b/src/components/Lunch/styles.css
@@ -27,6 +27,7 @@
 .join {
   display: flex;
   justify-content: space-around;
+  width: 99.7%;
 }
 
 .lunch-border {
