--- a/src/components/Order/styles.css
+++ b/src/components/Order/styles.css
@@ -1,24 +1,11 @@
 .order-container {
   display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   border: 1px solid #ddd;
   border-radius: 5px;
   margin: 5px;
-  width: 99%;
-  max-width: 99%;
   min-height: 50px;
-  max-height: 260px;
-}
-
-.order-item {
-  padding: 10px;
-  margin: 5px;
-  background-color: #FFFEC7;
-  width: 99%;
-  display: flex;
-  justify-content: space-between;
-  border-radius: 5px;
-  box-shadow: 4px 4px 5px 0px rgba(179,179,179,0.7);
 }
 
 .order-title  {
